--- a/html/index.ejs
+++ b/html/index.ejs
@@ -938,6 +938,43 @@
                         </div>
                     </div>
                 </div>
+                
+                
+                <!--新表单-->
+                <div>
+                    <h2>表单</h2>
+                    <p>什么都不带的表单</p>
+                    <div class="demo">
+                        <div class="demo-content">
+                            <form class="ui-form">
+                                <div class="ui-row">
+                                    <label class="ui-row-label">必填的</label>
+                                    <div class="ui-row-control">
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="ui-row">
+                                    <label class="ui-row-label required">非必填的</label>
+                                    <div class="ui-row-control">
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="ui-row">
+                                    <label class="ui-row-label">必填的</label>
+                                    <div class="ui-row-control">
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="ui-row">
+                                    <label class="ui-row-label">必填的</label>
+                                    <div class="ui-row-control">
+                                        <textarea></textarea>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
                 <!--表单验证-->
                 <div>
