--- a/html/index.ejs
+++ b/html/index.ejs
@@ -942,7 +942,7 @@
                 
                 <!--新表单-->
                 <div>
-                    <h2>表单</h2>
+                    <h2>新表单</h2>
                     <p>什么都不带的表单</p>
                     <div class="demo">
                         <div class="demo-content">
