--- a/html/index.ejs
+++ b/html/index.ejs
@@ -973,6 +973,36 @@
                                 </div>
                             </form>
                         </div>
+                        <div class="demo-code">
+                                <pre class="brush:html">
+                                <form class="ui-form">
+                                <div class="ui-row">
+                                    <label class="ui-row-label">必填的</label>
+                                    <div class="ui-row-control">
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="ui-row">
+                                    <label class="ui-row-label required">非必填的</label>
+                                    <div class="ui-row-control">
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="ui-row">
+                                    <label class="ui-row-label">必填的</label>
+                                    <div class="ui-row-control">
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="ui-row">
+                                    <label class="ui-row-label">必填的</label>
+                                    <div class="ui-row-control">
+                                        <textarea></textarea>
+                                    </div>
+                                </div>
+                            </form>
+                                </pre>
+                        </div>
                     </div>
                 </div>
 
