1.增加了新的查询条件的类，以前的保留，但是我把api注释了 2.增加了清除浮动的代码

--- a/html/index.ejs
+++ b/html/index.ejs
@@ -464,60 +464,95 @@
                         </div>
                     </div>
                 </div>
-                <!--查询条件-->
+                <!---查询条件-->
                 <div>
                     <h2>查询条件</h2>
                     <div class="demo">
                         <div class="demo-content">
-                            <form class="form-search">
-                                <div class="search-row clearfix">
-                                    <span class="fl">条件1</span>
-                                    <input type="text" class="input fl mar-right-10" />
-                                    <span class="fl">条件2</span>
-                                    <input type="text" class="input fl mar-right-10" />
-                                </div>
-                                <div class="search-row clearfix">
-                                    <span class="fl">条件3</span>
-                                    <input type="text" class="input fl mar-right-10" />
-                                    <span class="fl">条件4</span>
-                                    <input type="text" class="input fl mar-right-10" />
-                                </div>
-                                <button class="button button-green">查询</button>
+                            <form class="ui-search">
+                                <a class="fr button-green-hollow">添加</a>
+
+                                <span>订单说的:</span>
+                                <input type="text" />
+                                <span>是否显示</span>
+                                <select>
+                                    <option>12</option>
+                                    <option>12</option>
+                                    <option>12</option>
+                                </select>
+                                <span>是否:</span>
+                                <label class="ui-checkbox">
+                                    <input type="checkbox" />
+                                    <i class="ui-checkbox-icon"></i>
+                                    sdasd
+                                </label>
+                                <span>是否:</span>
+                                <label class="ui-radio">
+                                    <input type="radio" />
+                                    <i class="ui-radio-icon"></i>
+                                    sdasd
+                                </label>
+                                <button class="button-green">查询</button>
                             </form>
-                        </div>
-                        <div class="demo-code">
-                            <pre class="brush:html">
-                                <form class="form-search">
-                                    <div class="search-row clearfix">
-                                        <span class="fl">条件1</span>
-                                        <input type="text" class="input fl mar-right-10" />
-                                        <span class="fl">条件2</span>
-                                        <input type="text" class="input fl mar-right-10" />
-                                    </div>
-                                    <div class="search-row clearfix">
-                                        <span class="fl">条件3</span>
-                                        <input type="text" class="input fl mar-right-10" />
-                                        <span class="fl">条件4</span>
-                                        <input type="text" class="input fl mar-right-10" />
-                                    </div>
-                                    <button class="button button-green">查询</button>
-                                </form>
-                            </pre>
                         </div>
                     </div>
                 </div>
+
+
+                <!--查询条件-->
+                <!--<div>-->
+                    <!--<h2>查询条件</h2>-->
+                    <!--<div class="demo">-->
+                        <!--<div class="demo-content">-->
+                            <!--<form class="form-search">-->
+                                <!--<div class="search-row clearfix">-->
+                                    <!--<span class="fl">条件1</span>-->
+                                    <!--<input type="text" class="input fl mar-right-10" />-->
+                                    <!--<span class="fl">条件2</span>-->
+                                    <!--<input type="text" class="input fl mar-right-10" />-->
+                                <!--</div>-->
+                                <!--<div class="search-row clearfix">-->
+                                    <!--<span class="fl">条件3</span>-->
+                                    <!--<input type="text" class="input fl mar-right-10" />-->
+                                    <!--<span class="fl">条件4</span>-->
+                                    <!--<input type="text" class="input fl mar-right-10" />-->
+                                <!--</div>-->
+                                <!--<button class="button button-green">查询</button>-->
+                            <!--</form>-->
+                        <!--</div>-->
+                        <!--<div class="demo-code">-->
+                            <!--<pre class="brush:html">-->
+                                <!--<form class="form-search">-->
+                                    <!--<div class="search-row clearfix">-->
+                                        <!--<span class="fl">条件1</span>-->
+                                        <!--<input type="text" class="input fl mar-right-10" />-->
+                                        <!--<span class="fl">条件2</span>-->
+                                        <!--<input type="text" class="input fl mar-right-10" />-->
+                                    <!--</div>-->
+                                    <!--<div class="search-row clearfix">-->
+                                        <!--<span class="fl">条件3</span>-->
+                                        <!--<input type="text" class="input fl mar-right-10" />-->
+                                        <!--<span class="fl">条件4</span>-->
+                                        <!--<input type="text" class="input fl mar-right-10" />-->
+                                    <!--</div>-->
+                                    <!--<button class="button button-green">查询</button>-->
+                                <!--</form>-->
+                            <!--</pre>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <!--tab标签-->
                 <div>
                     <h2>tab标签</h2>
                     <div class="demo">
                         <div class="demo-content">
-                            <div class="ui-tab clearfix">
-                                <ul class="ui-tab-head clearfix">
+                            <div class="ui-tab ">
+                                <ul class="ui-tab-head">
                                     <li class="active"><a href="javascript:;">标签1</a></li>
                                     <li><a href="javascript:;">标签2</a></li>
                                     <li><a href="javascript:;">标签3</a></li>
                                 </ul>
-                                <ul class="ui-tab-body clearfix">
+                                <ul class="ui-tab-body ">
                                     <li class="active"><a href="javascript:;">标签1</a></li>
                                     <li><a href="javascript:;">标签2</a></li>
                                     <li><a href="javascript:;">标签3</a></li>
@@ -526,15 +561,15 @@
                         </div>
                         <div class="demo-code">
                             <pre class="brush:html">
-                                <div class="ui-tab clearfix">
+                                <div class="ui-tab ">
                                     <!--tab头部-->
-                                    <ul class="ui-tab-head clearfix">
+                                    <ul class="ui-tab-head ">
                                         <li class="active"><a href="javascript:;">标签1</a></li>
                                         <li><a href="javascript:;">标签2</a></li>
                                         <li><a href="javascript:;">标签3</a></li>
                                     </ul>
                                     <!--tab装内容的地方-->
-                                    <ul class="ui-tab-body clearfix">
+                                    <ul class="ui-tab-body">
                                         <li class="active"><a href="javascript:;">标签1</a></li>
                                         <li><a href="javascript:;">标签2</a></li>
                                         <li><a href="javascript:;">标签3</a></li>
@@ -547,42 +582,42 @@
                 </div>
 
                 <!--表格上方查询-->
-                <div>
-                    <a class="anchor"></a>
-                    <h2>表格上方查询</h2>
-                    <div class="demo">
-                        <div class="demo-content">
-                            <div class="ui-action-menu clearfix">
-                                <div class="ui-search clearfix fr">
-                                    <input class="input" type="text">
-                                    <button class="button-search"></button>
-                                </div>
-                                <label class="ui-checkbox clearfix fl">
-                                    <input type="checkbox">
-                                    <i class="ui-checkbox-icon"></i>
-                                    全选
-                                </label>
-                                <button type="button" class="button button-green-hollow">添加</button>
-                            </div>
-                        </div>
-                        <div class="demo-code">
-                            <pre class="brush:html">
-                                <div class="ui-action-menu clearfix">
-                                    <div class="ui-search clearfix fr">
-                                        <input class="input" type="text">
-                                        <button class="button-search"></button>
-                                    </div>
-                                    <label class="ui-checkbox clearfix fl">
-                                        <input type="checkbox">
-                                        <i class="ui-checkbox-icon"></i>
-                                        全选
-                                    </label>
-                                    <button type="button" class="button button-green-hollow">添加</button>
-                                </div>
-                            </pre>
-                        </div>
-                    </div>
-                </div>
+                <!--<div>-->
+                    <!--<a class="anchor"></a>-->
+                    <!--<h2>表格上方查询</h2>-->
+                    <!--<div class="demo">-->
+                        <!--<div class="demo-content">-->
+                            <!--<div class="ui-action-menu clearfix">-->
+                                <!--<div class="ui-search clearfix fr">-->
+                                    <!--<input class="input" type="text">-->
+                                    <!--<button class="button-search"></button>-->
+                                <!--</div>-->
+                                <!--<label class="ui-checkbox clearfix fl">-->
+                                    <!--<input type="checkbox">-->
+                                    <!--<i class="ui-checkbox-icon"></i>-->
+                                    <!--全选-->
+                                <!--</label>-->
+                                <!--<button type="button" class="button button-green-hollow">添加</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="demo-code">-->
+                            <!--<pre class="brush:html">-->
+                                <!--<div class="ui-action-menu clearfix">-->
+                                    <!--<div class="ui-search clearfix fr">-->
+                                        <!--<input class="input" type="text">-->
+                                        <!--<button class="button-search"></button>-->
+                                    <!--</div>-->
+                                    <!--<label class="ui-checkbox clearfix fl">-->
+                                        <!--<input type="checkbox">-->
+                                        <!--<i class="ui-checkbox-icon"></i>-->
+                                        <!--全选-->
+                                    <!--</label>-->
+                                    <!--<button type="button" class="button button-green-hollow">添加</button>-->
+                                <!--</div>-->
+                            <!--</pre>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <!--表格-->
                 <div>
