--- a/public/css/doc.css
+++ b/public/css/doc.css
@@ -1,6 +1,6 @@
 *{box-sizing: border-box}
 .content{width: 1024px;margin: 0 auto;}
-.content-left{width: 850px}
+.content-left{width: 850px !important;background: #fff!important;}
 .content-right{width: 174px}
 .list{position: fixed;padding:10px 0 0 10px;}
 .list li{padding: 5px 0}
