--- a/public/css/lib/ui-dialog.css
+++ b/public/css/lib/ui-dialog.css
@@ -1,12 +1,3 @@
-/*!
- * ui-dialog.css
- * Date: 2014-07-03
- * https://github.com/aui/artDialog
- * (c) 2009-2014 TangBin, http://www.planeArt.cn
- *
- * This is licensed under the GNU LGPL, version 2.1 or later.
- * For details, see: http://www.gnu.org/licenses/lgpl-2.1.html
- */
 .ui-dialog {
     *zoom:1;
     _float: left;
@@ -16,10 +7,10 @@
     border-radius: 6px;
     outline: 0;
     background-clip: padding-box;
-/*    font-family: Helvetica, arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.428571429;
-    color: #333;*/
+    /*    font-family: Helvetica, arial, sans-serif;
+        font-size: 14px;
+        line-height: 1.428571429;
+        color: #333;*/
     opacity: 0;
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -92,7 +83,7 @@
     line-height: 1.1;
     /*min-height: 16.428571429px;*/
     padding: 20px;
-    overflow:hidden; 
+    overflow:hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     /*font-weight: bold;*/
@@ -158,81 +149,79 @@
     border: 1px solid transparent;
     border-radius: 4px;
     -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-       -o-user-select: none;
-          user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .ui-dialog-footer button:focus {
-  outline: thin dotted #333;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+    outline-offset: -2px;
 }
 
 .ui-dialog-footer button:hover,
 .ui-dialog-footer button:focus {
-  color: #333333;
-  text-decoration: none;
+    color: #333333;
+    text-decoration: none;
 }
 
 .ui-dialog-footer button:active {
-  background-image: none;
-  outline: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-          box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 .ui-dialog-footer button[disabled] {
-  pointer-events: none;
-  cursor: not-allowed;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-  -webkit-box-shadow: none;
-          box-shadow: none;
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.65;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 .ui-dialog-footer button {
-  color: #999;
-  background-color: #f1f1f1;
-  border-color: #999;
+    color: #999;
+    background-color: #f1f1f1;
+    border-color: #999;
 }
 
 .ui-dialog-footer button:hover,
 .ui-dialog-footer button:focus,
 .ui-dialog-footer button:active {
-  color: #333333;
-  background-color: #ebebeb;
-  border-color: #adadad;
+    color: #333333;
+    background-color: #ebebeb;
+    border-color: #adadad;
 }
 
 .ui-dialog-footer button:active{
-  background-image: none;
+    background-image: none;
 }
 
 .ui-dialog-footer button[disabled],
 .ui-dialog-footer button[disabled]:hover,
 .ui-dialog-footer button[disabled]:focus,
 .ui-dialog-footer button[disabled]:active {
-  background-color: #ffffff;
-  border-color: #cccccc;
+    background-color: #ffffff;
+    border-color: #cccccc;
 }
 
 .ui-dialog-footer button.ui-dialog-autofocus {
-  color: #ffffff;
-  background-color: #24cf5f;
-  border-color: #24cf5f;
+    color: #ffffff;
+    background-color: #24cf5f;
+    border-color: #24cf5f;
 }
 
 .ui-dialog-footer button.ui-dialog-autofocus:hover,
 .ui-dialog-footer button.ui-dialog-autofocus:focus,
 .ui-dialog-footer button.ui-dialog-autofocus:active {
-  color: #ffffff;
-  background-color: #24cf5f;
-  border-color: #24cf5f;
+    color: #ffffff;
+    background-color: #24cf5f;
+    border-color: #24cf5f;
 }
 
 .ui-dialog-footer button.ui-dialog-autofocus:active {
-  background-image: none;
+    background-image: none;
 }
 .ui-popup-top-left .ui-dialog,
 .ui-popup-top .ui-dialog,
@@ -374,57 +363,35 @@
 
 @-webkit-keyframes ui-dialog-loading {
     0% {
-        -webkit-transform: rotate(0deg);
+        -webkit-transform: rotate(360deg);
     }
     100% {
-        -webkit-transform: rotate(360deg);
+        -webkit-transform: rotate(0deg);
     }
 }
 @keyframes ui-dialog-loading {
     0% {
-        transform: rotate(0deg);
-    }
-    100% {
         transform: rotate(360deg);
     }
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
-.ui-dialog-loading {
-    vertical-align: middle;
-    position: relative;
+.ui-dialog-loading{
+
+}
+.ui-dialog-loading-icon{
     display: block;
-    *zoom: 1;
-    *display: inline;
-    overflow: hidden;
-    width: 32px;
-    height: 32px;
-    /*top: 50%;*/
-    /*margin: -16px auto 0 auto;*/
-    font-size: 0;
-    text-indent: -999em;
-    color: #666;
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    margin: 0 auto;
+    background: url(../../img/common/loading.png) no-repeat;
+    -webkit-transform: rotate(0deg);
+    -webkit-animation: ui-dialog-loading .8s infinite linear;
+    transform: rotate(0deg);
+    animation: ui-dialog-loading .8s infinite linear;
 }
-.ui-dialog-loading {
-    width: 100%\9;
-    text-indent: 0\9;
-    line-height: 32px\9;
-    text-align: center\9;
-    font-size: 12px\9;
-}
-
-.ui-dialog-loading::after {
-    position: absolute;
-    content: '';
-    width: 3px;
-    height: 3px;
-    margin: 14.5px 0 0 14.5px;
-    border-radius: 100%;
-    box-shadow: 0 -10px 0 1px #ccc, 10px 0px #ccc, 0 10px #ccc, -10px 0 #ccc, -7px -7px 0 0.5px #ccc, 7px -7px 0 1.5px #ccc, 7px 7px #ccc, -7px 7px #ccc;
-    -webkit-transform: rotate(360deg);
-    -webkit-animation: ui-dialog-loading 1.5s infinite linear;
-    transform: rotate(360deg);
-    animation: ui-dialog-loading 1.5s infinite linear;
-    display: none\9;
-}
-
-.ui-alert{width: 244px;text-align: center}
+.ui-dialog-loading-icon+p{margin-top: 10px;}
+.ui-alert{min-width: 244px;text-align: center;max-width: 400px}
